--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -35,5 +35,7 @@
 		<url-pattern>/faces/*</url-pattern>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-
+ <session-config>
+      <session-timeout>15</session-timeout>
+   </session-config>
 </web-app>
